# ngio

./: .gitattributes  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  ci_upstream.yml  docs.yml
src/ngio/common/: _pyramid.py
src/ngio/hcs/: _plate.py
src/ngio/io_pipes/: _ops_slices.py
src/ngio/ome_zarr_meta/ngio_specs/: _channels.py  _pixel_size.py
src/ngio/tables/backends/: _anndata.py  _anndata_utils.py
src/ngio/utils/: _zarr_utils.py
tests/stores/: conftest.py  test_http_store.py
tests/unit/hcs/: test_plate.py
tests/unit/ome_zarr_meta/: test_unit_ngio_specs.py
