# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/
[tool.hatch.build.targets.wheel]
packages = ["src/ngio"]

# https://peps.python.org/pep-0621/
[project]
name = "ngio"
dynamic = ["version"]
description = "Next Generation file format IO"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Lorenzo Cerrone", email = "lorenzo.cerrone@uzh.ch" }]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
# add your package dependencies here
dependencies = [
    "numpy",
    "filelock",
    "zarr>3",
    "scipy",
    "fsspec",
    "anndata>=0.12.0,<0.13.0",
    "pydantic",
    "pandas>=1.2.0,<3.0.0",
    "requests",
    "aiohttp",
    "dask[array]",
    "dask[distributed]",
    # "xarray", still not used
    "ome-zarr-models",
    "pooch",
    "polars",
    "pyarrow",
    "pillow",
]

# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
# "extras" (e.g. for `pip install .[test]`)
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "scikit-image",
    "moto[server]",
    "boto3",
    "pytest_httpserver",
    "devtools",
    "s3fs",
]

dev = [
    "zarrs",
    "Pympler",
    "napari",
    "pyqt5",
    "matplotlib",
    "notebook",
    "ty",
    "pdbpp",        # https://github.com/pdbpp/pdbpp
    "pre-commit",
    "rich",         # https://github.com/Textualize/rich
    "ruff",
    "scikit-image",
    "commitizen",
] # add anything else you like to have in your dev environment here

docs = [
    "ruff",
    "mkdocs<2.0",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "mkdocs-autorefs",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-git-committers-plugin-2",
    "markdown-exec[ansi]",
    "griffe-typingdoc",
    "scikit-image",
    "matplotlib",
    "tabulate",
    "rich",
    "mike",
]


[project.urls]
homepage = "https://github.com/BioVisionCenter/ngio"
repository = "https://github.com/BioVisionCenter/ngio"

# Entry points
# https://peps.python.org/pep-0621/#entry-points
# same as console_scripts entry point
# [project.scripts]
# ngio-cli = "ngio:main_cli"

# [project.entry-points."some.group"]
# tomatoes = "ngio:main_tomatoes"

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "D401", # First line should be in imperative mood (remove to opt in)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true

# https://docs.astral.sh/ty
[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
unresolved-import = "warn"

# https://docs.pytest.org/
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::zarr.errors.ZarrUserWarning",                    # required for anndata
    "ignore::anndata._warnings.ImplicitModificationWarning",  # anndata internal index coercion
    "ignore::UserWarning:anndata._io.zarr",                   # anndata zarr v2→v3 migration notice
]
addopts = [
    "-vv",
    "--color=yes",
    "--cov=ngio",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

# https://coverage.readthedocs.io/
[tool.coverage.run]
source = ["ngio"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
    "pass",
]

# https://github.com/mgedmin/check-manifest#configuration
# add files that you want check-manifest to explicitly ignore here
# (files that are in the repo but shouldn't go in the package)
# https://github.com/crate-ci/typos
[tool.typos.default.extend-words]
# Acronyms
OME = "OME"
FO = "FO"
# Surname
Comparin = "Comparin"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "scm"          # reads current version from git tags; no file to mutate
update_changelog_on_bump = false  # keep manual CHANGELOG for now
major_version_zero = true         # 0.x bumps don't require breaking-change commits

[tool.check-manifest]
ignore = [
    ".pre-commit-config.yaml",
    ".ruff_cache/**/*",
    ".github/**/*",
    "docs/**/*",
    "pixi.lock",
    "mkdocs.yml",
    "CHANGELOG.md",
    "tests/**/*",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
ngio = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
python = ">=3.11,<3.12"

[tool.pixi.feature.dev.pypi-dependencies]
commitizen = ">=4.0"

[tool.pixi.feature.dev.tasks]
bump-patch = "cz bump --increment PATCH --no-verify"
bump-minor = "cz bump --increment MINOR --no-verify"
bump-major = "cz bump --increment MAJOR --no-verify"
bump-alpha = "cz bump --prerelease alpha --no-verify"
bump-beta  = "cz bump --prerelease beta --no-verify"
pre-commit = "pre-commit run --all-files; git add -u"

[tool.pixi.feature.py11.dependencies]
python = ">=3.11,<3.12"

[tool.pixi.feature.py12.dependencies]
python = ">=3.12,<3.13"

[tool.pixi.feature.py13.dependencies]
python = ">=3.13,<3.14"

[tool.pixi.feature.py14.dependencies]
python = ">=3.14,<3.15"

[tool.pixi.feature.docs.tasks]
serve_docs = "mkdocs serve"
clean_nb_data = "rm -rf ./docs/notebooks/**/*.zarr"
test_nb = { cmd = "jupyter-execute ./docs/notebooks/*.ipynb" }


[tool.pixi.environments]
default = { solve-group = "default" }

docs = { features = ["docs"], solve-group = "py11" }

# test envs
test11 = { features = ["py11", "test"], solve-group = "py11" }
test12 = { features = ["py12", "test"], solve-group = "py12" }
test13 = { features = ["py13", "test"], solve-group = "py13" }
test14 = { features = ["py14", "test"], solve-group = "py14" }

# dev env
dev = { features = ["dev", "test"], solve-group = "py11" }
test = { features = ["test"], solve-group = "py11" }
